--- a/css/styles.css
+++ b/css/styles.css
@@ -437,6 +437,10 @@ mark,
   background-color: #fcf8e3;
 }
 
+.portfolio-video {
+  margin-bottom: 2rem;
+}
+
 .list-unstyled {
   padding-left: 0;
   list-style: none;
